syntax = "proto3";

package comics;

option go_package = "likoscp.comics.v1;comicsv1";

service ComicsService {
  rpc CreateComic(CreateComicRequest) returns (CreateComicResponse);
  rpc GetComicByID(GetComicByIDRequest) returns (Comic);
  rpc ListComics(Empty) returns (ComicList);
  rpc UpdateComic(UpdateComicRequest) returns (Empty);
  rpc DeleteComic(DeleteComicRequest) returns (Empty);
}

message Chapter {
  string id = 1;
  string title = 2;
  int32 number = 3;
  string description = 4;
  string status = 5;
}

message Comic {
  string id = 1;
  string title = 2;
  string user_id = 3;
  string status = 4;
  repeated Chapter chapters = 5;
}

message CreateComicRequest {
  string title = 1;
  string user_id = 2;
  string status = 3;
}

message CreateComicResponse {
  string id = 1;
}

message GetComicByIDRequest {
  string id = 1;
}

message ComicList {
  repeated Comic comics = 1;
}

message Empty {}

message UpdateComicRequest {
  string id = 1;
  string title = 2;
  string status = 3;
}

message DeleteComicRequest {
  string id = 1;
}

